package FSSystem;

//{{
message MultiFileDataItemFormat
{
    required string Name = 1;
    optional bytes  Content=2;
}

message MultiFileDataFormat
{
    repeated MultiFileDataItemFormat Files=1;
}
//}}
//{{c2s
message ImageUploadRequest{
    required string Token = 1;
    optional string Name = 2;
    required bytes Content = 3;
    required bool Thumb = 4;
    optional string Type = 5;
    optional int32 Timeout=6;
    optional string RequestId = 7;
    optional string ResTag=8; //a=avatar p=picture
}

message ImageDownloadRequest{
    required string Token = 1;
    required string Name = 2;
    optional bool Thumb = 3;
    optional string RequestId = 4;
}

message ImageUploadRequestHeader{
    required string Token = 1;
    required string Name = 2;
    required bool Thumb = 4;
    optional string Type = 5;
    optional int32 Timeout=6;
    required string RequestId = 7;
    optional string ResTag=8; //a=avatar p=picture
    required int32  TotalBlock=9;
}

message ImageUploadRequestPart{
    required string RequestId = 1;
    required int32  PartId=2;
    required bytes Content = 3;
}

message BatchUploadRequestHeader{
    required string Token = 1;
    required string RequestId = 2;
    required int32  TotalBlock=3;
}

message BatchUploadRequestPart{
    required string RequestId = 1;
    required int32  PartId=2;
    required bytes Content = 3;
}

//}}
//{{s2c
message ImageUploadResult {
    required string Name=1;
    optional string RequestId = 2;
}

message FSGeneralError {
    required int32 ErrorCode = 1;
    optional string RequestId = 2;
}

message ImageDownloadResult{
    required bytes Content = 1;
    optional bool Thumb = 2;
    optional string RequestId = 3;
}

message ImageUploadRequestPartAck
{
    required string RequestId = 1;
    required int32  PartId=2;
}

message ImageUploadRequestHeaderAck{
    required string RequestId = 1;
    required string Name = 2;
    required bool   Exists=3;
}

message BatchUploadRequestPartAck
{
    required string RequestId = 1;
    required int32  PartId=2;
}

message BatchUploadRequestHeaderAck{
    required string RequestId = 1;
    required bool   Exists=2;
}
//}}
//{{ s2s
message Parameter
{
	required int64 cs = 1;
	optional int64 from = 2;
	optional bytes requestId = 3;
	required int32 index = 4;
	optional bool  thumb = 5;
}

message QueryFileExistence{
    required string   name = 1;
	required bytes    token = 2;
	required bytes    parameter = 3;
}

message FileExistenceResult{
    required string name = 1;
    required bool   exist = 2;
	required bytes  token = 3;
	required bytes  parameter = 4;
}
message FileRequest {
    required string name = 1;
	required bytes  token = 2;
	required bytes  parameter = 3;
}
message FileResponse {
    required string name = 1;
	optional bytes  token = 2;
    optional string type = 3;
    optional bytes  content = 4;
	required bytes  parameter = 5;
	optional int32  expire = 6 [default=24];
	optional int32  error_code = 7;
}
//}}
