package Discussion.S2C;
message DiscussionInfo
{
	required int64 DiscussionId = 1;
	required string Title = 2;
	optional int32 Kind = 3;
	optional int32 Option = 4;
	optional int64 Icon = 5;
	required int32 Version = 6;
	optional int32 MemberVersion = 7;
	optional int32 CreateDate = 8;
}
message MyDiscussionOption
{
	required int64 DiscussionId = 1;
	optional int32 Option = 2;
}
message UserDiscussionList
{
	message DiscussionSimpleInfo
	{
		required int64 DiscussionId = 1;
		optional int32 Version = 2;
		optional int32 MemberVersion = 3;
	}
	repeated .Discussion.S2C.UserDiscussionList.DiscussionSimpleInfo Discussion = 1;
}
message DiscussionMemberInfo
{
	required int32 UserId = 1;
	optional int32 Position = 2;
}
message DiscussionMemberList
{
	required int64 DiscussionId = 1;
	repeated .Discussion.S2C.DiscussionMemberInfo Member = 2;
	optional int32 MemberVersion = 3;
}
message DiscussionError
{
	optional int64 DiscussionId = 1;
	required int32 ErrorCode = 2;
}
message NewDiscussionArrival
{
	required int64 DiscussionId = 1;
}
message MemberLeave
{
	required int64 DiscussionId = 1;
	required int32 UserId = 2;
}
message MemberJoin
{
	required int64 DiscussionId = 1;
	required int32 UserId = 2;
}
message ChatInfo
{
	required int64 DiscussionId = 1;
	required int32 UserId = 2;
	required bytes Content = 3;
	optional int32 TimeStamp = 4;
	optional int64 MsgId = 5;
}
message ChatInfoAck
{
	required int64 MsgId = 1;
}
message InviteMember
{
	required int64 DiscussionId = 1;
	required int32 FromId = 2;
	optional string Memo = 3;
	required bytes InviteId = 4;
}
